--- a/index.css
+++ b/index.css
@@ -1,3 +1,47 @@
-#heading{
-    color:red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.logo{
+    width: 100px
+}
+
+.nav-items > ul{
+    display: flex;
+    list-style-type: none;
+    font-size: 20px;
+}
+
+.nav-items > ul > li{
+    padding: 10px;
+    margin: 10px
+}
+
+.res-card{
+    width:150px;
+    
+    padding:5px;
+}
+
+.res-card:hover{
+    cursor: pointer;
+    border:1px solid black;
+}
+
+.search{
+    padding :10px;
+}
+
+.res-container{
+    display:flex;
+    flex:flex-wrap
+}
+.res-logo{
+    margin:5px;
+    width:140px;
+    height:200px;
+}
+.h3{
+    align-self: center;
 }
