--- a/index.css
+++ b/index.css
@@ -49,3 +49,11 @@
 .filter-btn{
     margin: 10px
 }
+.shimmer-container{
+    display:flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+    background-color: #f0f0f0;
+    margin:10px;
+}
