--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
-.header{
+@import "tailwindcss";
+
+/* .header{
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
@@ -56,4 +58,4 @@
 .shimmer-card{
     background-color: #f0f0f0;
     margin:10px;
-}
+} */
